syntax = "proto3";

option go_package = "github.com/zachmandeville/tester-prototype/test-target/test-target";

package testtarget;

message ComplimentRequest {
  string name  = 1;
}

message ComplimentResponse {
  string compliment = 1;
}

service Shim {
  rpc GiveCompliment(ComplimentRequest) returns (ComplimentResponse){}
}
